[package]
name = "grade_calculator"
version = "1.0.1"
edition = "2021"
author = "Chris Swindell <swindell.christian.g@gmail.com>"
license = "GPL-3.0-or-later"
description = "Calculates and keeps track of grades for a single course using information found in the course's syllabus."
repository = "https://github.com/TheOGChips/grade_calculator"
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
text_io = "0.1.12"
